Fix sponsor banner display & add a setting to hide them without having to delete the files

--- a/html/components/settings-tab/index.html
+++ b/html/components/settings-tab/index.html
@@ -135,7 +135,7 @@
         </select>
       </span>
       <span><button sbToggle="$_HidePenaltyClocks" ApplyPreview="HidePenaltyClocks">Hide Penalty Clocks</button></span>
-      <span></span>
+      <span><button sbToggle="$_HideBanners" ApplyPreview="HideBanners">Hide Sponsor Banners</button></span>
       <span sbContext="/ScoreBoard.Media.Format(custom).Type(view)">
         <label>Custom Page View: </label>
         <select sbControl="$_CustomHtml" ApplyPreview="CustomHtml">
