support custom themes

--- a/html/components/sbo-input/index.html
+++ b/html/components/sbo-input/index.html
@@ -121,7 +121,7 @@
             sbDisplay="JamNumberRecorded"
           ></span
           >. Assign to Jam
-          <select class="Jam" sbControl="-:" sbCall="opUpdateTripSelects">
+          <select class="Jam" sbCall="opUpdateTripSelects">
             <option
               sbContext="^^Period([Period])"
               sbForeach="Jam::value,num"
